# Alarm-Clock

./: .dockerignore  Dockerfile  README.md  __init__.py  alarm.py  analog_clock.py  clock.py  compose.yaml  main_window.py  pyproject.toml  requirements.txt  setting_alarm_clock_dialog.py  stopwatch.py  take_nap_dialog.py  timer.py  utilities.py  world_clock.py
alarm_clock/: __main__.py  alarm.py  alarm_clock.py  clock.py  main_window.py  stopwatch.py  timer.py  utilities.py  world_clock.py
alarm_clock/dialogs/: disable_alarm_clock_dialog.py  disable_timer.py  setting_alarm_clock_dialog.py
alarm_clock/other_widgets/: analog_clock.py  switch_button.py
